@@ -25,6 +25,9 @@ ikiwiki (2.60) UNRELEASED; urgency=low
     account. Also, avoid making index pages for directories that contain
     no files.
   * external: Fix support for hooks called in an array context.
+  * Options set in the setup file are now immediatly loaded by ikiwiki -setup.
+    This allows later switches to override them. Previously, setup file
+    options overrode most command line options.
 
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
